# obtree

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 189b5099b14b_add_custom_plant_fields.py  18c800399016_add_location_system_with_types_fields_.py  2b41fb4b4ed7_add_status_field_to_organization_.py  2e274636ea10_add_status_field_to_projects.py  2f16c29081c9_add_select_to_fieldtype_enum.py  3ac48cef7032_make_accession_species_id_nullable_for_.py  490490843fb4_initial_migration_with_uuid_ids.py  4deb0f562b2f_add_description_field_to_organizations.py  4ef2d86e29a6_add_custom_accession_fields.py  5253f04e4e0c_add_removed_at_field_to_organization_.py  60247aee9f81_add_species_table.py  623b22877c4f_add_hybrid_fields_to_accessions.py  63021185d508_add_plants_table.py  8fc5eefb335e_remove_hybrid_fields_from_plants.py  (+10 more)
app/: config.py  database.py  logging_config.py  main.py
docs/: ADMIN_SETUP_QUICK_REFERENCE.md  CUSTOM_DOMAIN_SETUP.md  DOMAIN_QUICK_REFERENCE.md  PRODUCTION_ADMIN_SETUP.md
frontend/: accession.html  accessions-list.html  admin.html  dashboard.html  index.html  login.html  org-admin.html  organization.html  plant.html  profile.html  project.html  projects.html  signup.html  species-list.html  species.html  tables-demo.html
scripts/: create_admin.py  seed.py  seed_admin.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+76 files in other folders)
